--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 html{
     font-size: 62.5%;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -21,6 +21,7 @@ body{
 
 h1{
     font-size: 3.2rem;
+    font-weight: bolder;
 }
 
 h2{
@@ -51,6 +52,32 @@ a{
     text-decoration: none;
 }
 
+section{
+    min-height: calc(100vh - 80px);
+    border: 0.1rem solid #333;
+}
+
+img{
+    height: 55rem;
+    width: 45rem;
+    transition: 0.5s all ease;
+}
+
+img:hover{
+    transform: scale(1.1);
+}
+
+footer{
+    text-align: center;
+    background-color: rgba(26, 8, 58, 0.6);
+    color: white;
+    padding: 1% 2%;
+    width: 100%;
+    z-index: 9999;
+    
+}
+
+
 /*************************************************************************/
 
 
@@ -60,19 +87,340 @@ a{
     width: 100%;
 }
 
+/*************************************************************************/
+
 /* Nav*/
 
 nav{
-   background-color: yellow;
+   background-color: rgba(26, 8, 58, 0.6);
    padding: 1% 2%;
+   position: fixed;
+   width: 100%;
+   z-index: 9999;
+}
+
+nav ul{
+    margin-top: 2rem;
 }
 
 nav ul li {
     display: inline;
+    margin-right: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    
 }
+
+nav ul li a{
+    color: white;
+    transition: 0.5s all ease;
+}
+
+nav ul li a:hover{
+    background: cyan;
+    color: blue;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+/* nav ul li a:focus{
+    background: red;
+    color: white;
+} */
 
 .nav-items{
     float: right;
 }
 
+.mobile-nav-items li{
+    display: block;
+}
+
+.mobile-menu-btn{
+
+        background: linear-gradient(45deg, rgb(250, 190, 190), rgb(13, 12, 77));
+        padding: 1rem 2rem;
+        color: white;
+        border-radius: 1rem;
+        transition: 0.5s all;
+        display: none;
+        float: right;
+}
+
+.mobile-menu-btn:hover{
+    -webkit-box-shadow: 0.1rem 0.6rem 0.9rem 0.5rem rgba(0,0,0,0.75);
+    -moz-box-shadow: 0.1rem 0.6rem 0.9rem 0.5rem rgba(56, 54, 54, 0.75);
+    box-shadow: 0.1rem 0.2rem 0.6rem 0.2rem rgba(0,0,0,0.75);
+    background: linear-gradient(45deg,  rgb(13, 12, 77), rgb(250, 190, 190));
+    transform:scale(1.1);
+}
+
+.mobile-nav{
+    display:none;
+    border: 1px solid cyan;
+    width: 100%;
+    text-align: center;
+}
+
+.mobile-menu-btn + .mobile-nav:active,
+.mobile-menu-btn:focus + .mobile-nav{
+    display: inline-block;
+}
+
+@media(max-width: 767px){
+
+    .nav-items{
+        display: none;
+    }
+
+    .mobile-menu-btn{
+        display: inline-block;
+    }
+    /* .mobile-nav{
+        display:inline-block;
+    } */
+}
+
+
 /*************************************************************************/
+
+/* text highlight style */
+.text-highlight{
+    color: #EC4C78;
+}
+
+
+/*************************************************************************/
+
+/* Default button style */
+
+.btn-default{
+    background: linear-gradient(45deg, rgb(250, 190, 190), rgb(13, 12, 77));
+    padding: 1rem 2rem;
+    color: white;
+    border-radius: 1rem;
+    transition: 0.5s all;
+    display: inline-block;
+}
+
+.btn-default:hover{
+    -webkit-box-shadow: 0.1rem 0.6rem 0.9rem 0.5rem rgba(0,0,0,0.75);
+    -moz-box-shadow: 0.1rem 0.6rem 0.9rem 0.5rem rgba(56, 54, 54, 0.75);
+    box-shadow: 0.1rem 0.2rem 0.6rem 0.2rem rgba(0,0,0,0.75);
+    background: linear-gradient(45deg,  rgb(13, 12, 77), rgb(250, 190, 190));
+    transform:scale(1.1);}
+
+/*************************************************************************/
+
+/* top section */
+
+@media(min-width:768px){
+    .top-section{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        background-image: url("../images/header-bg.png");
+        background-size: cover;
+    }
+}
+
+.top-section .block{
+    padding: 10% 5%;
+}
+
+.top-section .block .author-name{
+    font-size: 4.2rem;
+    font-weight: 900;
+    letter-spacing: 0.5rem;
+    margin-bottom: 4rem;
+}
+
+.top-section .block p{
+    color: #333;
+    margin-bottom: 2.5rem;
+}
+
+/*************************************************************************/
+
+
+/* Biography section */
+
+@media(min-width:768px){
+
+    .biography-section{
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-end;
+        justify-content: flex-end;
+        background-image: url("../images/biography-bg.png");
+        background-size: cover;
+        padding: 3rem;
+    }
+}
+
+.biography-section .block1, .biography-section .block2{
+    padding: 0 5%;
+}
+
+.biography-section .block1{
+    flex:2;
+    order:2;
+    padding-top: 10%;
+}
+
+.biography-section .block2{
+    flex:2;
+    order:1;
+}
+
+
+.biography-section .block1 p{
+    color: #333;
+    margin-bottom: 2.5rem;
+    
+}
+
+/*************************************************************************/
+
+/* latest works section */
+
+@media(min-width:768px){
+    .works-section{
+        background: url("../images/latest-work-bg.png");
+        background-size: cover;
+        padding: 3rem;
+    }
+}
+
+.works-section h1{
+    text-align: center;
+}
+
+.latest-works{
+    display: flex;
+    flex-direction: horizontal;
+	flex-wrap: wrap; 
+    /* align-content: space-between; */
+    height: 100%;
+}
+
+.latest-works .item{
+    /* align-items: center; */
+    padding-left: 5%;
+}
+
+.works-section img{
+    height: 25rem;
+    width: 25rem;
+    border: 0.1rem solid black;
+    transform: rotate(-10deg);
+    margin: 15% 5%;
+}
+
+.works-section img:hover{
+    -webkit-box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(0,0,0,0.75);
+    -moz-box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(56, 54, 54, 0.75);
+    box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(0,0,0,0.75);
+    background: linear-gradient(45deg,  rgb(13, 12, 77), rgb(250, 190, 190));
+    transform: rotate(0deg);
+    transform: scale(1.3);     
+}
+
+
+@media (max-width: 767px){
+    .works-section img{
+        height: 35rem;
+        width: 35rem;
+        border: 0.1rem solid black;
+        margin-top: 15%;
+        transform: rotate(0deg);
+    }
+
+    .works-section img:hover{
+        transform: scale(1.1);     
+    }
+}
+
+.latest-works .block1{
+    flex: 1;
+}
+
+.latest-works .block2{
+    flex: 1;
+}
+
+.latest-works .block3{
+    flex: 1;
+    flex-grow: 1;
+}
+
+/*************************************************************************/
+
+/* Clients review section */
+
+@media(min-width: 768px){
+    .review-section{
+        background: url("../images/review-bg.png");
+        background-size: cover;
+        padding: 3rem;
+    }
+}
+
+.review-section h1{
+    text-align: center;
+}
+
+.single-review{
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    text-align: justify;
+    width: 80%;
+    margin:5% 10%;
+}
+
+.single-review .block1{
+    flex: 1;
+}
+
+.single-review .block2{
+    flex: 1;
+    padding: 2%;
+}
+
+.single-review .block3{
+    flex: 1;
+}
+
+.client-img-thumbnail{
+    height: 15rem;
+    width: 15rem;
+}
+
+.designation-highlight{
+    color: rgb(110, 109, 109);
+    text-align: center;
+}
+
+.message-me{
+    background: linear-gradient(30deg, yellow, purple);
+    color: white;
+    text-align: center;
+    border-radius: 1rem;
+    padding: 5rem 8rem;
+    transition: 0.5s all ease;
+}
+
+.message-me:hover{
+    -webkit-box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(0,0,0,0.75);
+    -moz-box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(56, 54, 54, 0.75);
+    box-shadow:  0.1rem 0.2rem 1.5rem 0.5rem rgba(0,0,0,0.75);
+    transform: scale(1.1);
+}
+
+/*************************************************************************/
+
+/* footer section */
+/* .footer-section{
+    height: 20vh;
+} */
